--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,5 @@
-@font-face {
-  font-family: 'Lato';
-  src: local('Lato'),
-       url('./fonts/Lato-Regular.ttf') format('truetype');
-}
+@import url("https://use.typekit.net/zbo3zor.css");
+
 @font-face {
   font-family: 'PlayfairDisplay';
   src: local('PlayfairDisplay'),
@@ -51,9 +48,12 @@ h3 {
 }
 
 body, textarea {
-  font-family: 'Lato';
+  font-family: "lato", sans-serif;
+font-weight: 400;
+font-style: normal;
   color: var(--dark-gray);
   background-color: var(--light-gray);
+  
 
 
 }
