--- a/src/App.css
+++ b/src/App.css
@@ -238,7 +238,7 @@
         margin-left: 20px;
     }
     .main-image{
-        height: 60vh;
+        height: 70vh;
         
     }
     .onas-wrapper{
@@ -273,6 +273,8 @@
     }
     .main-wrapper h1 {
         padding-top: 3em;
+        margin: 10px;
+    font-size: 1.5em;
 
     }
 }
