--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@
     max-width: 990px;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 5em;
+    padding-top: 20vh;
     text-align: center;
 }
 .main-wrapper h2{
@@ -139,6 +139,10 @@
     align-items: center;
     justify-content: center;
 }
+.sluzba-box:hover h2{
+    border-color: var(--brown);
+    opacity: .8;
+}
 .onas-text{
     padding-top: 20px;
     margin-bottom: 0;
@@ -152,6 +156,7 @@
    border-bottom: var(--light-brown) solid 3px;
     font-size: 1.6em;
     padding-bottom: 5px;
+    transition: ease-in .2s;
 }
 .sluzby-box{
  display: flex;
@@ -219,7 +224,79 @@
     display: flex;
     justify-content: center;
   }
-
+ /* Style for the aktuality-box component */
+.aktuality-box {
+    display: block;
+    margin-bottom: 20px;
+    text-decoration: none;
+    color: #333;
+  }
+  .aktuality h3{
+    margin-bottom: 10px;
+  }
+  .btn-aktuality{
+    margin-top: 10px;
+    font-size: 0.8em;
+    padding: 7px 12px;
+  }
+  
+  /* Style for the box content */
+  .box-content {
+    padding: 20px;
+    /* border: 3px solid var(--brown); */
+    border-radius: 12px;
+    transition: transform 0.2s, box-shadow 0.2s;
+    background-color: #fff;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    position: relative;
+  
+    /* Hover effect */
+    
+  }
+  .box-content:hover {
+    transform: translateY(-3px);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
+  }
+  
+  /* Style for the box title */
+.box-title {
+    font-size: 24px;
+    margin-bottom: 10px;
+    text-decoration: none; /* Remove the default underline */
+    position: relative;
+    margin-left: 0;
+  
+    /* Add a light brown underline */
+    
+  }
+  .box-title::after {
+    content: '';
+    display: block;
+    width: 130px;
+    height: 3px;
+    background-color: var(--light-brown); /* Light brown underline color */
+    position: absolute;
+    bottom: -4px; /* Adjust as needed */
+    left: 0;
+  }
+  
+  
+  /* Style for the box short text */
+  .box-short-text {
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+  
+  /* Style for the box date */
+  .box-date {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    font-size: 14px;
+    color: #999;
+  }
+  
+  
 
   @media (max-width: 768px) {
     
