--- a/src/App.css
+++ b/src/App.css
@@ -133,7 +133,7 @@
     background-color: var(--dark-blue);
     color: var(--white);
     margin: 20px;
-    max-width: 290px;
+    max-width: 292px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -265,8 +265,7 @@
     text-decoration: none; /* Remove the default underline */
     position: relative;
     margin-left: 0;
-  
-    /* Add a light brown underline */
+    color: initial;
     
   }
   .box-title::after {
