--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ h1 {
 
 h2 {
   color: var(--red);
-  font-weight: bold;
+  font-weight: 400;
   margin-left: 10px;
   font-size: 1.8em;
   margin-top: 0;
