--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,7 @@
 .onas-content h2, .onas-bottom-article h2{
     font-size: 2em;
     margin-left: 0;
+    text-align: start;
 }
 .sluzba-box{
     background-color: var(--dark-blue);
@@ -150,6 +151,7 @@
 }
 .onas-content{
     margin-top: 0;
+    text-align: justify;
 }
 .sluzba-box h2 {
     margin: 2em 2em;
@@ -157,6 +159,7 @@
     font-size: 1.6em;
     padding-bottom: 5px;
     transition: ease-in .2s;
+   
 }
 .sluzby-box{
  display: flex;
@@ -209,7 +212,7 @@
     position: absolute;
     left: 0;
     margin-left: 12px;
-    margin-top: 2px;
+    margin-top: 5px;
   }
   
   .list-side li:nth-child(odd) {
@@ -256,6 +259,14 @@
   .box-content:hover {
     transform: translateY(-3px);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
+  }
+  .contact-name-side a{
+    color: inherit;
+    transition: .1s ease-in;
+  }
+  .contact-name-side a:hover{
+    color: var(--light-brown);
+    opacity: .3;
   }
   
   /* Style for the box title */
