--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,6 @@
 
 @import url("https://use.typekit.net/zbo3zor.css");
-@font-face {
-  font-family: 'PlayfairDisplay';
-  src: local('PlayfairDisplay'),
-       url('./fonts/PlayfairDisplay-VariableFont_wght.ttf')format('truetype')
-}
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap');
 body{
   margin: 0;
 }
@@ -20,7 +16,7 @@ h1,
 h2,
 h3,
 h4 {
-  font-family: 'PlayfairDisplay';
+  font-family: 'Playfair Display', serif;
   color: var(--black);
 }
 
