--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 
-@import url("https://use.typekit.net/zbo3zor.css");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap');
 body{
   margin: 0;
@@ -44,7 +44,7 @@ h3 {
 }
 
 body, textarea {
-  font-family: "lato", sans-serif;
+  font-family: 'Roboto', sans-serif;
 font-weight: 400;
 font-style: normal;
   color: var(--dark-gray);
