--- a/src/Components/footer.css
+++ b/src/Components/footer.css
@@ -6,6 +6,7 @@
 
 .row{
 	display: flex;
+	
 	flex-wrap: wrap;
 }
 .footer{
@@ -112,9 +113,34 @@ font-style: normal;
 	padding-top: 5px;
 }
 /*responsive*/
+
 @media(max-width: 767px){
   .footer-col{
-    width: 50%;
+    width: 100%;
+	flex: 1;
+	padding: 10px;
+}
+.footer-col img{
+	align-self: center;
+}
+.row{
+	flex-direction: row;
+}
+.contact ul li a{
+	padding-top: 1px;
+	padding-bottom: 0;
+}
+.col-logo{
+	flex: 2;
+}
+.col-services{
+	flex: 1;
+}
+.col-contact{
+	flex: 1;
+}
+.col-open{
+	flex: 2;
 }
 .footer-col ul{
     margin: 0;
